# $Id$

2006-07-12	Konstantin V. Arkhipov

	* core/Form/Form.class.php: getTexturalErrors() is deprecated in
	favour of getTextualErrors().

2006-06-29	Konstantin V. Arkhipov

	* main/DAOs/ObjectQuery.class.php: final now, as is trunk.

2006-06-28	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: removed generation of
	deprecated getForm() method.

2006-06-25	Konstantin V. Arkhipov

	* core/Form/RemoveSymbolsFilter.class.php: deprecated by
	StringReplaceFilter, already removed in 0.5.

	* core/Form/PrimitiveRange.class.php: fixed finally and partially
	synced with trunk.

	* 0.4.7 released.

2006-06-24	Anton E. Lebedevich
	
	* main/Utils/TextUtils.class.php: UrlSafeBase64Encode(),
	UrlSafeBase64Decode() added.

	* main/Utils/TextUtils.class.php: getHostFromUrl(), getPathFromUrl()
	added.

2006-06-22	Konstantin V. Arkhipov

	* main/DAOs/ObjectQuery.class.php: SQLArray support implemented.

2006-06-17	Konstantin V. Arkhipov

	* main/Flow/EditorController.class.php: uses makeForm() now.

	* meta/builders/ProtoClassBuilder.class.php: getForm() (single global
	Form object) deprecated in
	favor of makeForm() (Form's object factory) as suggested by sloory.

2006-06-11	Konstantin V. Arkhipov

	* main/DAOs/FileSystemDaoWorker.class.php,
	main/DAOs/SmartDaoWorker.class.php,
	main/DAOs/VoodooDaoWorker.class.php: transparent DAO-workers are now
	WatermarkedPeer-friendly.

2006-06-11	Konstantin V. Arkhipov

	* 0.4.6 released.

2006-06-08	Konstantin V. Arkhipov

	* meta/: two minor typo-caused bugs.

2006-05-29	Konstantin V. Arkhipov

	* meta/: spooked classes implemented, which is never generated and
	used only for referencing inside one meta-config.

2006-05-27	Konstantin V. Arkhipov

	* 0.4.5 released.

2006-05-25	Konstantin V. Arkhipov

	* meta/, core/DB/: default values for generic non-object types
	implemented.

	* meta/types/StringType.class.php,
	meta/classes/MetaClassProperty.class.php: correct column type guessing
	for meta's StringType.
