@@ -1,7 +1,7 @@
 <?php
 /*****************************************************************************
  *   Copyright (C) 2006, onPHP's MetaConfiguration Builder.                  *
- *   Generated by onPHP-0.4.3.99 at 2006-05-07 19:37:11                      *
+ *   Generated by onPHP-0.5 at 2006-07-17 10:20:12                           *
  *   This file is autogenerated - do not edit.                               *
  *****************************************************************************/
 /* $Id$ */
@@ -13,7 +13,7 @@
 			DBTable::create('administrator')->
 			addColumn(
 				DBColumn::create(
-					DataType::create(DataType::INTEGER)->
+					DataType::create(DataType::BIGINT)->
 					setNull(false),
 					'id'
 				)->
