@@ -1,5 +1,9 @@
 # $Id$
 
+2006-07-17	Konstantin V. Arkhipov
+
+	* meta/: synced with trunk: DTD update, identifier's shortcut.
+
 2006-07-12	Konstantin V. Arkhipov
 
 	* core/Form/Form.class.php: getTexturalErrors() is deprecated in
